objects/DMAPP__AM_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Logo_URL__c</fullName>
        <description>URL to an image of appropriate dimensions to render on Map</description>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ticker__c</fullName>
        <description>Short name used for display on Maps</description>
        <label>Ticker</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>AM Competitor</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>